# Radar-B2B

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose-local.yml  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  requisitos.md
.claude/: settings.json  settings.local.json
.firecrawl/: apollo-enrich.md  apollo-pricing.md  sicoes-adj.html  sicoes-after-click.md  sicoes-busqueda-js.md  sicoes-busqueda.json  sicoes-comun-js.md  sicoes-content.md  sicoes-contrataciones-js.md  sicoes-conv.html  sicoes-describe.md  sicoes-direct-nav.md  sicoes-e4-click.md  sicoes-full-html.md  sicoes-full.html  sicoes-inputs.md  sicoes-interact-form.md  sicoes-js-click.md  sicoes-nav-form.md  sicoes-operacion.html  sicoes-portal2-js.md  sicoes-protect-js.md  sicoes-raw.html  sicoes-screenshot.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  5b057dd6f004_split_location_into_city_and_country.py  add_score_justification_and_last_enriched.py
docs/: README.md  adr.md  api-reference.md  architecture.md  data-sources.md  deployment.md  frontend.md  getting-started.md  scoring-engine.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: MainNav.tsx  providers.tsx
openspec/: config.yaml
scratch/: check_industries.py  test_apollo_v2.py
scripts/: seed_db.py  sync_apollo.py  sync_sicoes.py  update_docs.py
src/: config.py  main.py
src/domain/: scoring.py
src/services/: company_service.py  contact_service.py  (+2 more)
(+139 files in other folders)
