[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "radar-b2b"
version = "0.1.0"
description = "Radar B2B Inteligente - Plataforma de detección de empresas con probabilidad de compra"
authors = [{name = "Matías Torres", email = "matysantitorres@gmail.com"}]
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {version = "^0.27.0", extras = ["standard"]}
sqlalchemy = {version = "^2.0", extras = ["asyncio"]}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
httpx = "^0.28.1"
beautifulsoup4 = "^4.12.0"
pydantic-settings = "^2.1.0"
google-genai = "^2.2.0"
apscheduler = "^3.10.0"
rapidfuzz = "^3.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
ruff = "^0.1.0"
mypy = "^1.7.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
